<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamemode_background"
    tools:context=".GameMode">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/circle"
        android:text="@string/Addition"
        android:fontFamily="@font/baloo_thambi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSub"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/Subtraction"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMult"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/Multiplication"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDiv"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/Division"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMult" />

    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/ChoiceText"
        android:textSize="30sp"
        android:fontFamily="@font/baloo_thambi"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>