<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/math_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="520dp"
        android:background="@drawable/circle"
        android:text="@string/Start"
        android:fontFamily="@font/baloo_thambi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHelp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:text="@string/Help"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/baloo_thambi"
        app:layout_constraintBottom_toBottomOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnStart"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAbout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:background="@drawable/circle"
        android:layout_marginBottom="64dp"
        android:text="@string/About"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/baloo_thambi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>